// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopicHead functional tests on web should render correctly 1`] = `
<div>
  <div
    className="responsive-styles__component-fbPFZZ kPljll"
  >
    <h1
      aria-label="topic-name"
      className="responsive-styles__component-fbPFZZ gVyUxj"
      data-testid="topic-name"
      dir="auto"
      role="heading"
    >
      Animals
    </h1>
  </div>
</div>
`;

exports[`TopicHead functional tests on web should render correctly when loading 1`] = `<div />`;

exports[`TopicHead functional tests on web should render correctly with a description 1`] = `
<div>
  <div
    className="responsive-styles__component-fbPFZZ fqtkRE"
  >
    <h1
      aria-label="topic-name"
      className="responsive-styles__component-fbPFZZ gVyUxj"
      data-testid="topic-name"
      dir="auto"
      role="heading"
    >
      Animals
    </h1>
    <div
      className="responsive-styles__component-fbPFZZ gcEZOa"
    />
    <div
      data-testid="topic-description"
      dir="auto"
    >
      Animals are multicellular eukaryotic organisms.
    </div>
  </div>
</div>
`;
